# doughbox

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  typeshare.toml
core/: Cargo.toml  package.json
core/migrations/: V1__initial.sql  V2__rename_tables.sql  V3__fix_withholding_tax_currency.sql  V4__rename_currency_denomination.sql  V5__rename_no_units.sql  V6__add_tax_optimizations.sql
core/src/: main.rs
core/src/api/: errors.rs  handlers.rs  mod.rs  routes.rs
core/src/cli/: housekeeping.rs  import.rs  mod.rs  performance.rs  portfolio.rs  shared.rs  taxation.rs
core/src/commands/: api.rs  housekeeping.rs  import.rs  mod.rs  pl.rs  portfolio.rs  taxation.rs
core/src/database/: mod.rs
core/src/database/models/: dividend.rs  fund_report.rs  fx_conversion.rs  instrument.rs  interest.rs  listing_change.rs  mod.rs  performance.rs  position.rs  tax_optimization.rs  trade.rs
core/src/database/queries/: composite.rs  dividend.rs  fund_report.rs  fx_conversion.rs  fx_rate.rs  instrument.rs  interest.rs  listing_change.rs  mod.rs  performance.rs  position.rs  stock_split.rs  tax_optimization.rs  ticker_conversion.rs  trade.rs
core/src/importers/: erste_bank.rs  ibkr.rs  lightyear.rs  manual.rs  mod.rs  revolut.rs  scalable.rs  trade_republic.rs  trading212.rs  wise.rs
core/src/services/: events.rs  files.rs  mod.rs  notifications.rs  parsers.rs  performance.rs  portfolio.rs  positions.rs  shared.rs  stock_splits.rs  taxation.rs
core/src/services/importers/: erste_bank.rs  ibkr.rs  lightyear.rs  manual.rs  revolut.rs  scalable.rs  trade_republic.rs  trading212.rs  wise.rs
core/src/services/instruments/: fund_data.rs  identifiers.rs  mod.rs  names.rs  stock_splits.rs  ticker_symbols.rs
core/src/services/market_data/: fred.rs  fx_rates.rs  mod.rs  oekb.rs  openfigi.rs  polygon.rs  prices.rs
core/src/services/shared/: env.rs  logger.rs  mod.rs
core/src/util/: broker_helpers.rs  constants.rs  db_helpers.rs  general_helpers.rs  import_helpers.rs  market_data_helpers.rs  migrations.rs  mod.rs  performance_helpers.rs  taxation_helpers.rs
web/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  util.ts
web/src/components/: Badge.tsx  Button.tsx  Callout.tsx  Disclaimer.tsx  Drawer.tsx  EmptyState.tsx  EventCard.tsx  Input.tsx  Label.tsx  Menu.tsx  PerformanceChart.tsx  PositionPerformanceScatterChart.tsx  Skeleton.tsx  Switch.tsx  TabNavigation.tsx  Table.tsx  TimelineEventCard.tsx
web/src/components/Charts/: PortfolioPerformanceChart.tsx  PositionPerformanceChart.tsx
web/src/components/charts/: portfolio-performance-chart.tsx  position-performance-chart.tsx
web/src/components/composite/: bar-list.tsx  disclaimer.tsx  empty-state.tsx  event-card.tsx  menu.tsx
web/src/components/ui/: calendar.tsx  card.tsx  chart.tsx  input.tsx  navigation-menu.tsx  popover.tsx  skeleton.tsx  table.tsx
web/src/hooks/: useAuth.tsx  useIsMobile.tsx
web/src/lib/: http.ts  utils.ts
web/src/pages/: Login.tsx  login.tsx
web/src/pages/dashboard/: ActiveUnits.tsx  Dashboard.tsx  Dividends.tsx  PL.tsx  Performance.tsx  PerformanceChart.tsx  Portfolio.tsx  PositionPerformanceScatterChart.tsx  Positions.tsx  Taxation.tsx  Timeline.tsx  performance.tsx  portfolio.tsx  positions.tsx  taxation.tsx  timeline.tsx
web/src/types/: core.ts
