[package]
name = "doughbox"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.11.1"
walkdir = "2.5.0"
deunicode = "1.6.0"
csv = "1.3.1"
serde = { version = "1.0.215", features = ["derive"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
rust_decimal = { version = "1.36.0", features = ["db-tokio-postgres", "serde"] }
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
serde_json = "1.0.133"
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
clap = { version = "4.5.23", features = ["derive"] }
blake3 = "1.5.4"
num-format = "0.4.4"
tabled = "0.18.0"
owo-colors = "4.1.0"
spinners-rs = "2.3.0"
itertools = "0.14.0"
fancy-regex = "0.14.0"
pdf-extract = "0.8.0"
rust_decimal_macros = "1.36.0"
axum = "0.8.1"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs", "cors", "trace"] }
tower-sessions = "0.14.0"
tower-cookies = { version = "0.11.0", features = ["signed"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
anyhow = "1.0.94"
typeshare = "1.0.4"
futures = "0.3.31"
logos = "0.14.4"
log = "0.4.25"
env_logger = "0.11.6"

[build-dependencies]
static-files = "0.2.4"
