[package]
name = "doughbox"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
walkdir = "2.5.0"
deunicode = "1.6.2"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
rust_decimal = { version = "1.39.0", features = ["db-tokio-postgres", "serde"] }
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde_json = "1.0.145"
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"] }
clap = { version = "4.5.29", features = ["derive"] }
blake3 = "1.5.5"
num-format = "0.4.4"
tabled = "0.20.0"
owo-colors = "4.1.0"
spinners-rs = "2.3.0"
itertools = "0.14.0"
fancy-regex = "0.16.2"
pdf-extract = "0.10.0"
rust_decimal_macros = "1.39.0"
axum = "0.8.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "cors", "trace"] }
tower-sessions = "0.14.0"
tower-cookies = { version = "0.11.0", features = ["signed"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
anyhow = "1.0.95"
typeshare = "1.0.4"
futures = "0.3.31"
logos = "0.15.1"
log = "0.4.25"

[build-dependencies]
static-files = "0.3.1"
